--- a/public/css/mtenant.css
+++ b/public/css/mtenant.css
@@ -16,7 +16,7 @@ p {
      width: 80%;
      display: block;
      outline: none;
-     padding: 10px 10px 20px 10px;
+     padding: 10px;
      cursor: pointer;
      background: transparent;
      color: white;
