--- a/views/Tenant.hbs
+++ b/views/Tenant.hbs
@@ -15,7 +15,7 @@
         <div class="form-box">
             <h1>Details</h1>
             <div class="input-select">
-                <p>State:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <p>State:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <select name="state">
                         <option>Telangana</option>
                     </select>
