--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -60,6 +60,7 @@ select {
 }
 .form-box {
      width: 450px;
+     margin: auto;
      background: black;
      padding: 20px;
      border-radius: 20px;
