--- a/public/css/msignup.css
+++ b/public/css/msignup.css
@@ -11,7 +11,7 @@ a:hover {
 h1 {
      text-align: center;
      color: white;
-     font-size: 25px;
+     font-size: 40px;
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -24,7 +24,7 @@ h2 {
 }
 p {
      color: orange;
-     font-size: 15px;
+     font-size: 20px;
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      transform: translateX(10%) translateY(+50%);
@@ -47,12 +47,11 @@ select {
      display: block;
      outline: none;
      padding: 10px 0;
-     border: ipx solid orange;
      cursor: pointer;
      background: transparent;
-     color: orange;
+     color: white;
      opacity: 0.8;
-     font-size: 16px;
+     font-size: 20px;
      border-radius: 10px;
 }
 #button:hover {
