--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -58,7 +58,7 @@ select {
      padding: 15px 10px 15px 10px ;
      cursor: pointer;
      background: transparent;
-     color: orange;
+     color: white;
      opacity: 0.8;
      font-size: 30px;
      border-radius: 10px;
