--- a/public/css/login.css
+++ b/public/css/login.css
@@ -60,7 +60,7 @@ select {
      border: ipx solid orange;
      cursor: pointer;
      background: transparent;
-     color: orange;
+     color: white;
      opacity: 0.8;
      font-size: 16px;
      border-radius: 10px;
