--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -25,14 +25,14 @@ h1 {
      padding: 10px;
 }
 h2 {
-     color: orange;
+     color: white;
      font-size: 25px;
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      transform: translateX(+70%) translateY(-60%);
 }
 p {
-     color: orange;
+     color: white;
      font-size: 25px;
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -78,7 +78,6 @@ select {
 .input-box {
      margin: 31px auto;
      width: 90%;
-     border-bottom: 1px solid orange;
      padding-top: 5px;
 }
 .input-box input {
