--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -16,18 +16,18 @@ h1 {
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 h2 {
-     color: orange;
+     color: white;
      font-size: 15px;
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     transform: translateX(+70%) translateY(-150%);
+     transform: translateX(+70%) translateY(-120%);
 }
 p {
-     color: orange;
+     color: white;
      font-size: 20px;
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     transform: translateX(10%) translateY(+50%);
+     transform: translateX(10%) translateY(+80%);
 }
 option {
      color: orange;
