--- a/public/css/msignup.css
+++ b/public/css/msignup.css
@@ -22,8 +22,16 @@ h2 {
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      transform: translateX(+70%) translateY(-100%);
 }
-p {
+
+h3 {
      color: orange;
+     font-size: 15px;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+     transform: translateX(10%) translateY(+50%);
+}
+p {
+     color: white;
      font-size: 15px;
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
