--- a/public/css/msignup.css
+++ b/public/css/msignup.css
@@ -24,18 +24,18 @@ h2 {
 }
 
 h3 {
-     color: orange;
+     color: white;
      font-size: 15px;
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     transform: translateX(10%) translateY(+50%);
+     transform: translateX(10%) translateY(+100%);
 }
 p {
      color: white;
      font-size: 15px;
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     transform: translateX(10%) translateY(+100%);
+     transform: translateX(10%) translateY(+50%);
 }
 option {
      color: orange;
