--- a/public/css/msignup.css
+++ b/public/css/msignup.css
@@ -31,7 +31,7 @@ h3 {
      transform: translateX(10%) translateY(+100%);
 }
 p {
-     color: white;
+     color: orange;
      font-size: 15px;
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
