--- a/views/Account.hbs
+++ b/views/Account.hbs
@@ -2,7 +2,9 @@
 
 <head>
     <title>Account Deatils</title>
-    <link rel="stylesheet" href="/css/account.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" media="screen and (min-width: 500px)" href="/css/account.css">
+    <link rel="stylesheet" media="screen and (max-width: 499px)" href="/css/maccount.css">
     <link rel="icon" href="icon.png" type="image/png">
 </head>
 
