--- a/views/Account.hbs
+++ b/views/Account.hbs
@@ -3,8 +3,8 @@
 <head>
     <title>Account Deatils</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" media="screen and (min-width: 500px)" href="/css/account.css">
-    <link rel="stylesheet" media="screen and (max-width: 499px)" href="/css/maccount.css">
+    <link rel="stylesheet" media="screen and (min-width: 500px)" type="text/css" href="/css/account.css">
+    <link rel="stylesheet" media="screen and (max-width: 499px)" type="text/css" href="/css/maccount.css">
     <link rel="icon" href="icon.png" type="image/png">
 </head>
 
