--- a/public/css/mintro.css
+++ b/public/css/mintro.css
@@ -21,8 +21,19 @@ h2 {
      top: 50%;
      left: 50%;
      transform: translateX(-49%) translateY(-420%);
+     animation: text 3s 1;
 }
-
+@keyframes text {
+     0% {
+          color: black;
+     }
+     35% {
+          letter-spacing: 3px;
+     }
+     85% {
+          letter-spacing: 0px;
+     }
+}     
 #button {
      width: 40%;
      font-size: 20px;
