--- a/public/css/maccount.css
+++ b/public/css/maccount.css
@@ -97,7 +97,7 @@ h4 {
      transform: translateX(1%) translateY(+420%);
 }
 #button1 {
-     width: 50%;
+     width: 200vw;
      font-size: 20px;
      color: white;
      height: 50px;
