--- a/public/css/maccount.css
+++ b/public/css/maccount.css
@@ -1,6 +1,6 @@
 h1 {
      font-size: 20px;
-     width: 100%;
+     width: 100vw;
      background-color: black;
      border-radius: 10px;
      margin: auto;
