--- a/public/css/maccount.css
+++ b/public/css/maccount.css
@@ -18,7 +18,7 @@ h1 {
 }
 h2 {
      font-size: 20px;
-     width: 100%;
+     width: 85vw;
      background-color: black;
      border-radius: 10px;
      margin: auto;
@@ -36,7 +36,7 @@ h2 {
 }
 h3 {
      font-size: 20px;
-     width: 100%;
+     width: 85vw;
      background-color: black;
      border-radius: 10px;
      margin: auto;
@@ -54,7 +54,7 @@ h3 {
 }
 h4 {
      font-size: 20px;
-     width: 100%;
+     width: 85%;
      background-color: black;
      border-radius: 10px;
      margin: auto;
