--- a/public/css/login.css
+++ b/public/css/login.css
@@ -57,7 +57,7 @@ select {
      display: block;
      outline: none;
      padding: 10px 0;
-     border: ipx solid orange;
+     border: 1px solid white;
      cursor: pointer;
      background: transparent;
      color: white;
