--- a/public/css/login.css
+++ b/public/css/login.css
@@ -63,6 +63,8 @@ select {
      color: white;
      opacity: 0.8;
      font-size: 16px;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      border-radius: 10px;
 }
 #button:hover {
