--- a/public/css/intro.css
+++ b/public/css/intro.css
@@ -12,10 +12,12 @@ h2 {
      background-color: black;
      margin: auto;
      padding: 5px 5px 10px 5px;
+     border: 3px solid white;
      font-weight: bolder;
      color: white;
      text-align: center;
-     font-family: Verdana, sans-serif;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      position: absolute;
      opacity: 0.4;
      top: 50%;
