--- a/public/css/intro.css
+++ b/public/css/intro.css
@@ -12,7 +12,7 @@ h2 {
      background-color: black;
      margin: auto;
      padding: 5px 5px 10px 5px;
-     border: 3px solid white;
+     border: 3px solid black;
      font-weight: bolder;
      color: white;
      text-align: center;
@@ -22,7 +22,7 @@ h2 {
      opacity: 0.4;
      top: 50%;
      left: 50%;
-     transform: translateX(-49%) translateY(-380%);
+     transform: translateX(-49%) translateY(-350%);
      animation: text 3s 1;
 }
 @keyframes text {
@@ -30,7 +30,7 @@ h2 {
           color: black;
      }
      35% {
-          letter-spacing: 3px;
+          letter-spacing: 5px;
      }
      85% {
           letter-spacing: 0px;
