--- a/public/css/intro.css
+++ b/public/css/intro.css
@@ -38,16 +38,16 @@ h2 {
 }     
 #button {
      width: 15%;
-     font-size: 20px;
+     font-size: 25px;
      opacity: 0.8;
      color: white;
      height: 50px;
-     border-width: 2px;
      border-radius: 10px;
-     border-color: white;
+     border: 3px solid orange;
      background-color: black;
      text-align: center;
-     font-family: Verdana, sans-serif;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      position: absolute;
      top: 50%;
      left: 50%;
