--- a/public/css/intro.css
+++ b/public/css/intro.css
@@ -38,12 +38,12 @@ h2 {
 }     
 #button {
      width: 15%;
-     font-size: 25px;
+     font-size: 22px;
      opacity: 0.8;
      color: white;
      height: 50px;
      border-radius: 10px;
-     border: 3px solid orange;
+     border: 2px solid white;
      background-color: black;
      text-align: center;
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
