--- a/public/css/mintro.css
+++ b/public/css/mintro.css
@@ -15,7 +15,9 @@ h2 {
      font-weight: bolder;
      color: white;
      text-align: center;
-     font-family: Verdana, sans-serif;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+     border: 5px solid orange;
      position: absolute;
      opacity: 0.4;
      top: 50%;
@@ -36,14 +38,16 @@ h2 {
 }     
 #button {
      width: 37%;
-     font-size: 20px;
+     font-size: 22px;
      opacity: 0.8;
      color: white;
      height: 50px;
      border-radius: 10px;
+     border: 3px solid white;
      background-color: black;
      text-align: center;
-     font-family: Verdana, sans-serif;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      position: absolute;
      top: 50%;
      left: 50%;
