--- a/public/css/intro.css
+++ b/public/css/intro.css
@@ -20,6 +20,7 @@ body{
 h2 {
      font-size: 50px;
      width: 35%;
+     background-color: black;
      margin: auto;
      padding: 5px 5px 10px 5px;
      font-weight: bolder;
@@ -28,7 +29,7 @@ h2 {
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      position: absolute;
-     opacity: 0.4;
+     opacity: 0.7;
      top: 50%;
      left: 50%;
      transform: translateX(-49%) translateY(-310%);
