--- a/public/css/mintro.css
+++ b/public/css/mintro.css
@@ -1,20 +1,14 @@
-body{
+html {
+     background: url(back.png) no-repeat center center fixed;
+     -webkit-background-size: cover;
+     -moz-background-size: cover;
+     -o-background-size: cover;
+     background-size: cover;
+}
+body {
      margin: 0;
 }
-.section {
-     width: 100%;
-     height: 100vh;
-     position: relative;
-     align-items: center;
-     justify-content: center;
-     overflow: hidden;
-}
-.video-container {
-     position: absolute;
-     top: 0;
-     left: 0;
-     width: 100%;
-}
+
 
 h2 {
      font-size: 32px;
