--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -20,10 +20,9 @@ h1 {
      text-align: center;
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     font-size: 50px;
+     font-size: 35px;
      color: white;
      padding: 10px;
-     margin-bottom: 40px;
 }
 h2 {
      color: white;
@@ -68,8 +67,7 @@ select {
      background-color: green;
 }
 .form-box {
-     width: 80vh;
-     height: 80vh;
+     width: 100%;
      margin: auto;
      background: black;
      padding: 60px;
