--- a/public/css/mselectOption.css
+++ b/public/css/mselectOption.css
@@ -9,9 +9,10 @@ a:hover {
      height: 50px;
      opacity: 0.8;
      border-radius: 15px;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      background-color: black;
      text-align: center;
-     font-family: fantasy;
      position: absolute;
      top: 50%;
      left: 50%;
@@ -31,7 +32,8 @@ a:hover {
      border-radius: 15px;
      background-color: black;
      text-align: center;
-     font-family: fantasy;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      position: absolute;
      top: 50%;
      left: 50%;
@@ -55,7 +57,8 @@ ul {
 li {
      float: left;
      font-size: 15px;
-     font-family: fantasy;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
 }
 li a {
      display: block;
