--- a/public/css/mselectOption.css
+++ b/public/css/mselectOption.css
@@ -49,14 +49,12 @@ ul {
      margin: 0;
      padding: 0;
      overflow: hidden;
-     margin-left: -8px;
-     margin-right: -8px;
-     margin-top: -12px;
      background-color: black;
 }
 li {
      float: left;
      font-size: 15px;
+     font-style: bold;
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
 }
