--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -7,7 +7,8 @@ h1 {
      padding: 10px;
      color: white;
      text-align: center;
-     font-family: cursive;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      position: absolute;
      top: 50%;
      opacity: 0.8;
@@ -23,7 +24,8 @@ h2 {
      margin: auto;
      color: white;
      text-align: center;
-     font-family: cursive;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      opacity: 0.8;
      position: absolute;
      padding: 10px;
