--- a/public/css/mcontact.css
+++ b/public/css/mcontact.css
@@ -1,7 +1,7 @@
 
 h1 {
-     font-size: 100px;
-     width: 600px;
+     font-size: 20px;
+     width: 85vw;
      background-color: black;
      border-radius: 10px;
      margin: auto;
@@ -10,16 +10,15 @@ h1 {
      text-align: center;
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+     opacity: 0.8;
      position: absolute;
      top: 50%;
-     opacity: 0.8;
      left: 50%;
-     transform: translateX(-53%) translateY(-260%);
-     animation: text 3s 1;
+     transform: translateX(-50%) translateY(-500%);
 }
 h2 {
      font-size: 20px;
-     width: 600px;
+     width: 85vw;
      background-color: black;
      border-radius: 10px;
      margin: auto;
@@ -27,25 +26,14 @@ h2 {
      text-align: center;
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     opacity: 0.8;
      position: absolute;
      padding: 10px;
+     opacity: 0.8;
      top: 50%;
      left: 50%;
-     transform: translateX(-53%) translateY(+85%);
-     animation: text 3s 1;
+     transform: translateX(-50%) translateY(-300%);
 }
-@keyframes text {
-     0% {
-          color: black;
-     }
-     35% {
-          letter-spacing: 3px;
-     }
-     85% {
-          letter-spacing: 0px;
-     }
-}
+
 html {
      background: url(back.png) no-repeat center center fixed;
      -webkit-background-size: cover;
