--- a/public/css/owner.css
+++ b/public/css/owner.css
@@ -34,11 +34,13 @@ p {
      display: block;
      outline: none;
      padding: 10px 0;
-     border: ipx solid orange;
+     border: 3px solid white;
      cursor: pointer;
      background: transparent;
      color: orange;
      font-size: 16px;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      border-radius: 10px;
      transform: translateX(5%) translateY(+50%);
 }
