--- a/views/Owner.hbs
+++ b/views/Owner.hbs
@@ -3,8 +3,10 @@
 
 <head>
   <title>Owner</title>
+  <meta name="viewport" content="width=device-width,intial-scale=1.0">
+   <link rel="stylesheet" media="screen and (min-width: 500px)" type="text/css" href="/css/owner.css" />
+   <link rel="stylesheet" media="screen and (max-width: 499px)" type="text/css" href="/css/mowner.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="/css/owner.css">
   <link rel="icon" href="icon.png" type="image/png">
 </head>
 
