--- a/public/css/mowner.css
+++ b/public/css/mowner.css
@@ -48,7 +48,7 @@ p {
      background-color: green;
 }
 .form-box {
-     width: 500px;
+     width: 100vw;
      margin: auto;
      background: black;
      padding: 20px;
