--- a/public/css/mowner.css
+++ b/public/css/mowner.css
@@ -10,7 +10,7 @@ h2 {
      font-size: 15px;
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     transform: translateX(18%) translateY(+50%);
+     transform: translateX(12%) translateY(+50%);
 }
 h3 {
      color: white;
@@ -86,7 +86,7 @@ select {
 }
 .input-box {
      margin: 31px auto;
-     width: 80;
+     width: 80%;
      border-bottom-width: 30%;
      padding-top: 5px;
      transform: translateX(-3%) translateY(+50%);
