--- a/views/Owner.hbs
+++ b/views/Owner.hbs
@@ -57,7 +57,7 @@
         <input type="text" placeholder="What's app number(can be used by tenant)" name="contactNumber"
           pattern="[0-9]{10}" maxlength="10" required>
       </div>
-      <h2>please select these if they can be accesible within</h2>
+      <h2>Please select these if they can be accesible within</h2>
       <h2>1km radius from your current location</h2>
       <h3><input type="checkbox" class="checkbox1" name="veg">&nbsp;Vegetable Market
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
