--- a/public/css/mowner.css
+++ b/public/css/mowner.css
@@ -37,7 +37,7 @@ p {
      border: 3px solid white;
      cursor: pointer;
      background: transparent;
-     color: orange;
+     color: white;
      font-size: 16px;
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -53,7 +53,7 @@ p {
      padding: 20px;
      border-radius: 20px;
      opacity: 0.9;
-     transform: translateX(0%) translateY(+0%);
+     transform: translateX(10%) translateY(+10%);
 }
 html {
      background: url(back.png) no-repeat center center fixed;
