--- a/views/Owner.hbs
+++ b/views/Owner.hbs
@@ -57,8 +57,8 @@
         <input type="text" placeholder="What's app number(can be used by tenant)" name="contactNumber"
           pattern="[0-9]{10}" maxlength="10" required>
       </div>
-      <h2>Please select these if they can be accesible within</h2>
-      <h2>1km radius from your current location</h2>
+      <h2>Please select these if they can be accesible </h2>
+      <h2>within 1km radius from your current location</h2>
       <h3><input type="checkbox" class="checkbox1" name="veg">&nbsp;Vegetable Market
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <input type="checkbox" class="checkbox2" name="shop">&nbsp;Shopping Mall<br><br>
