--- a/public/css/mowner.css
+++ b/public/css/mowner.css
@@ -17,7 +17,7 @@ h3 {
      font-size: 15px;
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     transform: translateX(15%) translateY(+20%);
+     transform: translateX(10%) translateY(+20%);
 }
 .checkbox1:checked:before {
      background-color: green;
@@ -49,7 +49,7 @@ p {
 }
 .form-box {
      width: 90vw;
-     background: black;
+/*      background: black; */
      padding: 10px;
      border-radius: 20px;
      opacity: 0.9;
