--- a/public/css/mowner.css
+++ b/public/css/mowner.css
@@ -49,11 +49,11 @@ p {
 }
 .form-box {
      width: 90vw;
-/*      background: black; */
+     background: black;
      padding: 10px;
      border-radius: 20px;
-     opacity: 0.9;
-     transform: translateX(6%) translateY(+2%);
+     opacity: 0.8;
+     transform: translateX(6%) translateY(0%);
 }
 html {
      background: url(back.png) no-repeat center center fixed;
