--- a/public/css/login.css
+++ b/public/css/login.css
@@ -86,7 +86,7 @@ select {
 }
 .input-box input {
      width: 90%;
-     border: none;
+     border: 2px solid orange;
      outline: none;
      background: transparent;
      color: white;
