--- a/public/css/login.css
+++ b/public/css/login.css
@@ -86,7 +86,8 @@ select {
 }
 .input-box input {
      width: 90%;
-     border: 2px solid orange;
+     border: 2px solid green;
+     border-radius: 2px;
      outline: none;
      background: transparent;
      color: white;
