--- a/public/css/login.css
+++ b/public/css/login.css
@@ -86,8 +86,8 @@ select {
 }
 .input-box input {
      width: 90%;
-     border: 2px solid green;
-     border-radius: 2px;
+     border: 2px solid blue;
+     border-radius: 5px;
      outline: none;
      background: transparent;
      color: white;
