--- a/public/css/login.css
+++ b/public/css/login.css
@@ -86,7 +86,7 @@ select {
 }
 .input-box input {
      width: 90%;
-     border: 2px solid blue;
+     border: 2px solid white;
      border-radius: 5px;
      outline: none;
      background: transparent;
