--- a/public/css/login.css
+++ b/public/css/login.css
@@ -89,8 +89,7 @@ select {
      border: 2px solid orange;
      border-radius: 5px;
      outline: none;
-     background: black;
-     opacity: 0.8;
+     background: transparent;
      color: white;
 }
 html {
