--- a/public/css/login.css
+++ b/public/css/login.css
@@ -8,6 +8,11 @@ a:visited {
 a:hover {
      color: orange;
 }
+::placeholder{
+     color: white;
+     font-size: 12px;
+}
+
 
 #myEmail {
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
