--- a/public/css/login.css
+++ b/public/css/login.css
@@ -17,6 +17,7 @@ a:hover {
 #myEmail {
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
      font-size: 16px;
+     margin-left: 10px;
 }
 #myInput {
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
