--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -10,11 +10,11 @@ a:hover {
 }
 #myEmail {
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
-     font-size: 25px;
+     font-size: 18px;
 }
 #myInput {
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
-     font-size: 23px;
+     font-size: 18px;
 }
 h1 {
      text-align: center;
@@ -86,9 +86,12 @@ select {
      outline: none;
      border: 1.7px solid orange;
      border-radius: 5px;
-     padding-left: 15px;
+     padding: 5px 5px 5px 12px;
      background: transparent;
      color: white;
+}
+. input-box input:focus{
+     background-color: green;
 }
 
 .eye {
