--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -10,11 +10,11 @@ a:hover {
 }
 #myEmail {
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
-     font-size: 18px;
+     font-size: 20px;
 }
 #myInput {
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
-     font-size: 18px;
+     font-size: 20px;
 }
 h1 {
      text-align: center;
@@ -91,7 +91,7 @@ select {
      color: white;
 }
 . input-box input:focus{
-     background-color: green;
+     border: 1.7px solid green;
 }
 
 .eye {
