--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -71,7 +71,7 @@ select {
      margin: auto;
      background: black;
      padding: 60px;
-     border: 5px solid white;
+     border: 5px solid orange;
      border-radius: 20px;
      opacity: 0.8;
      transform: translateX(37%) translateY(75%);
@@ -87,7 +87,7 @@ select {
      outline: none;
      border: 1.7px solid orange;
      border-radius: 5px;
-     padding: 5px 5px 5px 12px;
+     padding: 5px 5px 5px 9px;
      background: transparent;
      color: white;
 }
