--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -62,6 +62,7 @@ select {
      opacity: 0.8;
      font-size: 30px;
      border-radius: 10px;
+     border: 3px solid white;
 }
 #button:hover {
      background-color: green;
@@ -71,7 +72,6 @@ select {
      margin: auto;
      background: black;
      padding: 60px;
-     border: 5px solid orange;
      border-radius: 20px;
      opacity: 0.8;
      transform: translateX(37%) translateY(75%);
@@ -85,8 +85,7 @@ select {
      width: 90%;
      border: none;
      outline: none;
-     border: 1.7px solid orange;
-     border-radius: 5px;
+     border-radius: 10px;
      padding: 5px 5px 5px 9px;
      background: transparent;
      color: white;
