--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -70,10 +70,10 @@ select {
 .form-box {
      width: 100%;
      margin: auto;
-     background-image: url('back.png');
+     background: black;
      padding: 60px;
      border-radius: 20px;
-     opacity: 1;
+     opacity: 0.8;
      transform: translateX(37%) translateY(75%);
 }
 .input-box {
