--- a/public/css/maccount.css
+++ b/public/css/maccount.css
@@ -90,7 +90,8 @@ h4 {
      border-radius: 10px;
      background-color: black;
      text-align: center;
-     font-family: fantasy;
+     font-family: apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      position: absolute;
      top: 50%;
      left: 50%;
@@ -105,7 +106,8 @@ h4 {
      border-radius: 10px;
      background-color: black;
      text-align: center;
-     font-family: fantasy;
+     font-family: apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      position: absolute;
      top: 50%;
      left: 50%;
