--- a/public/css/mcontact.css
+++ b/public/css/mcontact.css
@@ -14,7 +14,7 @@ h1 {
      position: absolute;
      top: 50%;
      left: 50%;
-     transform: translateX(-50%) translateY(-500%);
+     transform: translateX(-50%) translateY(-400%);
      animation: text 3s 1;
 }
 h2 {
@@ -32,7 +32,7 @@ h2 {
      opacity: 0.8;
      top: 50%;
      left: 50%;
-     transform: translateX(-50%) translateY(-300%);
+     transform: translateX(-50%) translateY(-200%);
      animation: text 3s 1
 }
 @keyframes text {
@@ -55,5 +55,5 @@ html {
      background-size: cover;
 }
 span {
-     color: orange;
+     color: white;
 }
