--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,121 +1,136 @@
-a:link {
-     color: white;
-     text-decoration: solid;
-}
-a:visited {
-     color: white;
-}
-a:hover {
-     color: orange;
-}
-::placeholder{
-     color: white;
-     font-size: 12px;
-}
 
-
-#myEmail {
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
-     font-size: 16px;
+body {
+     background-color: orange;
+     margin: 0;
 }
-#myInput {
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
-     font-size: 16px;
+.container {
+     width: 40%;
+     height: 65vh;
+     background-image: url("back.jpg");
+     border-radius: 30px;
+     padding: 0 0 0 30px;
+     margin: auto;
+     opacity: 0.8;
+     background-size: cover;
+     background-attachment: fixed;
+     background-position: center;
+     background-repeat: no-repeat;
+     transform: translateY(25%);
 }
-
-h1 {
+.container::after {
+     content: "";
+     display: table;
+     clear: both;
+}
+.login-box {
+     float: left;
+     width: 70%;
+}
+.signup-box {
+     float: left;
+     width: 30%;
+     height: 100%;
      text-align: center;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     font-size: 23px;
+     background-color: black;
+     opacity: 0.7;
+     border-radius: 0 30px 30px 0;
+}
+.child {
+     transform: translateX(0%) translateY(150%);
+}
+h1 {
+     font-family: "Poppins";
+     font-size: 25px;
      color: white;
+     text-align: left;
+     margin-top: 30px;
+     letter-spacing: 1px;
 }
 h2 {
-     color: orange;
-     font-size: 15px;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     transform: translateX(+70%) translateY(-150%);
-}
-p {
-     color: orange;
-     font-size: 15px;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     transform: translateX(10%) translateY(+50%);
-}
-option {
-     color: orange;
-     background-color: black;
-}
-select {
-     background-color: black;
-     color: white;
-     width: 200px;
-     height: 25px;
-     border-radius: 5px;
-     cursor: pointer;
-}
-#button {
-     margin: 40px auto 20px;
-     width: 80%;
-     display: block;
-     outline: none;
-     padding: 10px 0;
-     border: 3px solid white;
-     cursor: pointer;
-     background: transparent;
-     color: white;
-     opacity: 0.8;
+     font-family: "Poppins";
      font-size: 16px;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     border-radius: 10px;
-}
-#button:hover {
-     background-color: green;
-}
-.form-box {
-     width: 400px;
-     margin: auto;
-     background: black;
-     padding: 20px;
-     border-radius: 20px;
-     opacity: 0.8;
-     transform: translateX(0%) translateY(25%);
-}
-.input-box {
-     margin: 31px auto;
-     width: 80%;
-     padding-top: 5px;
-}
-.input-box input {
-     width: 90%;
-     border: 2px solid orange;
-     border-radius: 5px;
-     outline: none;
-     background: transparent;
      color: white;
+     letter-spacing: 1px;
 }
-html {
-     background: url(back.png) no-repeat center center fixed;
-     -webkit-background-size: cover;
-     -moz-background-size: cover;
-     -o-background-size: cover;
-     background-size: cover;
+
+.input-box input[type="email"] {
+     padding: 5px 5px 5px 30px;
+     border-radius: 5px;
+     font-family: "Poppins";
+     font-size: 14px;
+     color: white;
+     background: black;
+     width: 75%;
+}
+.input-box input[type="email"]:focus {
+     border: 3px solid lightseagreen;
+}
+.input-box input[type="password"]:focus {
+     border: 3px solid lightseagreen;
+}
+.input-box input[type="text"]:focus {
+     border: 3px solid lightseagreen;
+}
+.input-box input[type="password"] {
+     padding: 5px 5px 5px 30px;
+     border-radius: 5px;
+     font-family: "Poppins";
+     font-size: 14px;
+     color: white;
+     background: black;
+     width: 75%;
+}
+.input-box input[type="text"] {
+     padding: 5px 5px 5px 30px;
+     border-radius: 5px;
+     font-family: "Poppins";
+     font-size: 14px;
+     color: white;
+     background: black;
+     width: 75%;
+}
+
+.input-box i {
+     position: absolute;
+}
+.icon {
+     padding: 10px;
+     min-width: 40px;
+     color: white;
 }
 .eye {
      position: absolute;
 }
-.eye1 {
-     position: absolute;
+#button {
+     width: 37%;
+     height: 6vh;
+     background-color: black;
+     color: white;
+     padding: 4px;
+     border: 3px solid orange;
+     border-radius: 12px;
+     text-align: center;
+     margin-bottom: 30px;
+     font-family: "Poppins";
+     font-size: 18px;
+     letter-spacing: 1px;
 }
-.eye2 {
-     position: absolute;
+#button1 {
+     width: 60%;
+     height: 4vh;
+     background-color: black;
+     color: white;
+     padding: 4px;
+     border: 3px solid orange;
+     border-radius: 12px;
+     text-align: center;
+     font-family: "Poppins";
+     font-size: 13px;
+     letter-spacing: 1px;
 }
-#hide1 {
-     display: none;
+#button:hover {
+     background-color: green;
 }
-#hide3 {
-     display: none;
+#button1:hover {
+     background-color: green;
 }
