--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,7 +1,13 @@
 
 body {
-     background-color: orange;
      margin: 0;
+}
+html {
+     background: url(back.png) no-repeat center center fixed;
+     -webkit-background-size: cover;
+     -moz-background-size: cover;
+     -o-background-size: cover;
+     background-size: cover;
 }
 .container {
      width: 40%;
