--- a/public/css/login.css
+++ b/public/css/login.css
@@ -117,6 +117,7 @@ h2 {
      border-radius: 12px;
      text-align: center;
      margin-bottom: 30px;
+     opacity: 0.8;
      font-family: "Poppins";
      font-size: 18px;
      letter-spacing: 1px;
@@ -126,7 +127,7 @@ h2 {
      height: 6vh;
      background-color: black;
      color: white;
-     padding: 4px 4px 7px 4px;
+     padding: 4px 4px 6px 4px;
      border: 3px solid orange;
      border-radius: 8px;
      text-align: center;
