--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -11,7 +11,7 @@ html {
 }
 .container {
      width: 80%;
-     height: 55vh;
+     height: 50vh;
      background-image: url("formBack.jpg");
      border-radius: 30px;
      padding: 0 0 0 30px;
@@ -21,7 +21,7 @@ html {
      background-attachment: fixed;
      background-position: center;
      background-repeat: no-repeat;
-     transform: translateY(25%);
+     transform: translateY(20%);
 }
 .container::after {
      content: "";
@@ -46,7 +46,7 @@ html {
 }
 h1 {
      font-family: "Poppins";
-     font-size: 25px;
+     font-size: 22px;
      color: white;
      text-align: left;
      margin-top: 30px;
@@ -54,7 +54,7 @@ h1 {
 }
 h2 {
      font-family: "Poppins";
-     font-size: 16px;
+     font-size: 14px;
      color: white;
      letter-spacing: 1px;
 }
@@ -66,16 +66,16 @@ h2 {
      font-size: 14px;
      color: white;
      background: black;
-     width: 75%;
+     width: 70%;
 }
 .input-box input[type="email"]:focus {
-     border: 3px solid lightseagreen;
+     border: 3px solid green;
 }
 .input-box input[type="password"]:focus {
-     border: 3px solid lightseagreen;
+     border: 3px solid green;
 }
 .input-box input[type="text"]:focus {
-     border: 3px solid lightseagreen;
+     border: 3px solid green;
 }
 .input-box input[type="password"] {
      padding: 5px 5px 5px 30px;
@@ -84,7 +84,7 @@ h2 {
      font-size: 14px;
      color: white;
      background: black;
-     width: 75%;
+     width: 70%;
 }
 .input-box input[type="text"] {
      padding: 5px 5px 5px 30px;
@@ -93,7 +93,7 @@ h2 {
      font-size: 14px;
      color: white;
      background: black;
-     width: 75%;
+     width: 70%;
 }
 
 .input-box i {
@@ -108,8 +108,8 @@ h2 {
      position: absolute;
 }
 #button {
-     width: 37%;
-     height: 6vh;
+     width: 45%;
+     height: 5vh;
      background-color: black;
      color: white;
      padding: 4px;
@@ -122,7 +122,7 @@ h2 {
      letter-spacing: 1px;
 }
 #button1 {
-     width: 60%;
+     width: 70%;
      height: 4vh;
      background-color: black;
      color: white;
