--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -13,7 +13,7 @@ html {
      width: 80%;
      background-image: url("formBack.jpg");
      border-radius: 30px;
-     padding: 0 0 0 30px;
+     padding: 0 15px 0 15px;
      margin: auto;
      opacity: 0.8;
      background-size: cover;
@@ -109,7 +109,7 @@ h2 {
      color: white;
      padding: 2px;
      border: 3px solid orange;
-     border-radius: 12px;
+     border-radius: 6px;
      text-align: center;
      margin-bottom: 30px;
      font-family: "Poppins";
@@ -117,12 +117,12 @@ h2 {
      letter-spacing: 1px;
 }
 #button1 {
-     width: 70%;
+     width: 90%;
      background-color: black;
      color: white;
      padding: 2px;
      border: 3px solid orange;
-     border-radius: 12px;
+     border-radius: 6px;
      text-align: center;
      font-family: "Poppins";
      font-size: 13px;
