--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -44,7 +44,7 @@ h1 {
      font-family: "Poppins";
      font-size: 20px;
      color: white;
-     text-align: left;
+     text-align: center;
      margin-top: 20px;
      letter-spacing: 1px;
 }
