--- a/public/css/login.css
+++ b/public/css/login.css
@@ -47,7 +47,7 @@ h1 {
      font-family: "Poppins";
      font-size: 25px;
      color: white;
-     text-align: left;
+     text-align: center;
      letter-spacing: 1px;
 }
 h2 {
