--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -1,6 +1,15 @@
+::placeholder{
+     color: orange;
+}
 body {
-     background-color: orange;
      margin: 0;
+}
+html {
+     background: url(back.png) no-repeat center center fixed;
+     -webkit-background-size: cover;
+     -moz-background-size: cover;
+     -o-background-size: cover;
+     background-size: cover;
 }
 a:hover {
      color: orange;
