--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -25,7 +25,7 @@ a {
 }
 .container {
      width: 50%;
-     background-image: url("formBack.jpg");
+     background-image: url("formBack.png");
      padding: 30px 30px 30px 60px;
      position: absolute;
      right: 0;
