--- a/public/css/msignup.css
+++ b/public/css/msignup.css
@@ -47,7 +47,7 @@ select {
      position: fixed;
      padding:  20px 20px 30px 30px;
      opacity: 0.8;
-     background: url(formBack.jpg) no-repeat center center fixed;
+     background: url(formBack.png) no-repeat center center fixed;
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
