--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -25,6 +25,7 @@ a {
 }
 .container {
      width: 50%;
+     height: 100vh;
      background-image: url("formBack.png");
      padding: 30px 30px 30px 60px;
      position: absolute;
