--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -37,6 +37,7 @@ html {
      -moz-background-size: cover;
      -o-background-size: cover;
      background-size: cover;
+     position: absolute;
      transform: translateX(12%) translateY(20%);
 }
 
