--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -46,7 +46,7 @@ html {
 }
 
 h1 {
-     font-family: "Goldman";
+     font-family:"Poppins";
      font-size: 25px;
      color: white;
      text-align: center;
