--- a/views/selectOption.hbs
+++ b/views/selectOption.hbs
@@ -13,9 +13,9 @@
      <body>
           <div class="topnav" id="myTopnav">
                <a href="intro.html" class="active">Home Rentals</a>
-               <a href="/myAccount" onclick="myAccount()" class="ok">Account</a>
-               <a href="Contact.html" class="ok">Contact Us</a>
-               <a href="/logout" class="ok">Logout</a>
+               <a href="/myAccount" onclick="myAccount()">Account</a>
+               <a href="Contact.html">Contact Us</a>
+               <a href="/logout">Logout</a>
                <a
                     href="javascript:void(0);"
                     class="icon"
