--- a/public/css/intro.css
+++ b/public/css/intro.css
@@ -29,7 +29,7 @@ h2 {
      font-family: "Goldman";
      position: absolute;
      top: 20%;
-/*      left: 50%; */
+     left: 50%;
 /*      transform: translateX(-49%) translateY(-310%); */
      animation: text 3s 1;     
 }
