--- a/public/css/login.css
+++ b/public/css/login.css
@@ -45,7 +45,7 @@ html {
 h1 {
      font-family: "Open Sans";
      font-size: 30px;
-     color: black;
+     color: white;
      text-align: center;
      letter-spacing: 1px;
 }
