--- a/public/css/selectOption.css
+++ b/public/css/selectOption.css
@@ -24,7 +24,9 @@ html {
      text-decoration: none;
      font-size: 17px;
 }
-
+.topnav a:last-child {
+     padding: 14px 200px 14px 115px;
+}
 .topnav a:hover {
      background-color: #336b89;
      color: black;
